--- a/UI/design.ui
+++ b/UI/design.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>688</width>
-    <height>431</height>
+    <height>441</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -270,6 +270,31 @@
     </property>
     <property name="text">
      <string>Obtener Informe</string>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>370</y>
+      <width>671</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+    <property name="textVisible">
+     <bool>true</bool>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+    <property name="invertedAppearance">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
