[add]: Cambio título aplicación

--- a/UI/design.ui
+++ b/UI/design.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>FSC Movimientos</string>
+   <string>Control COC FSC Mayaprin</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
